--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.17.1",
+    "markdown-it": "^14.1.0",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^14.1.2"
   }
 }
