--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "fixall": "pnpm run lint:write && pnpm run format:write && pnpm run check:fix",
+    "lint:write": "pnpm run lint --write",
+    "lint": "biome lint ./src",
+    "format:write": "pnpm run format --write",
+    "format": "biome format ./app",
     "test": "vitest",
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.6",
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.15",
+    "@biomejs/biome": "^2.4.4",
     "@resvg/resvg-wasm": "^2.6.2",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
@@ -26,7 +33,8 @@
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0",
     "satori": "^0.19.1",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "ultracite": "^7.2.3"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
